--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
-  <title>Wayney.GitHub.io</title>
-  <meta name="description" content="My GitHub Pages">
+  <title>Then what is a page...</title>
+  <meta name="description" content="Initial">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
@@ -22,14 +22,14 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">Wayney.GitHub.io</h1>
+      <h1 class="title">Then what is a page...</h1>
     </header>
     <div id="container">
-      <p class="tagline">My GitHub Pages</p>
+      <p class="tagline">Initial</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/WayneY" class="code">View Wayney.GitHub.io on GitHub</a>
+          <a href="https://github.com/WayneY" class="code">View Then what is a page... on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
